# MRW

./: .gitignore  PORTFOLIO.md  README.md  SECURITY.md  pyproject.toml  score_events.py
.github/workflows/: python-tests.yml
examples/: README.md
sample_data/: input_events.csv
sql/: analysis_queries.sql
src/market_research_workflow/: __init__.py  database.py  exports.py  ingest.py  models.py  scoring.py
tests/: test_cli.py  test_ingest.py  test_scoring.py
