[project]
name = "market-research-workflow"
version = "0.1.0"
description = "MRW: public-safe market research workflow for validating, scoring, ranking, and exporting opportunity events."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
